spade-tests/src/snapshots/spade_tests__ast_lowering__wildcard_is_not_allowed_in_impl_trait.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct X {}
impl _ for X {}


error: _ is not a trait
  ┌─ testinput:2:6
  │
2 │ impl _ for X {}
  │      ^
